--- a/force-app/main/default/aura/cdgEmbedViewer/cdgEmbedViewer.cmp
+++ b/force-app/main/default/aura/cdgEmbedViewer/cdgEmbedViewer.cmp
@@ -1,6 +1,8 @@
-<aura:component implements="flexipage:availableForRecordHome,force:hasRecordId" access="global" >
+<aura:component implements="flexipage:availableForRecordHome,force:hasRecordId" access="global" controller="cdgAuditionHelper">
 	<aura:attribute name="record" type="Object"/>
     <aura:attribute name="simpleRecord" type="Object"/>
+    <aura:handler name="init" value="{!this}" action="{!c.doInit}"/>
+    <aura:attribute name="herokuDomain" type="String"/>
     <aura:attribute name="recordError" type="String"/>
     
     <force:recordData aura:id="recordLoader"
@@ -12,7 +14,7 @@
     
     <div class="embedHolder" style="text-align:center;">
 <lightning:card footer="" title="Audition">
-    <center><iframe width="560" height="315" src="{!'https://cdg-zigtest.herokuapp.com/player/'+ v.simpleRecord.Video_ID__c}" frameborder="0" allow="autoplay; encrypted-media"></iframe></center>
+    <center><iframe width="560" height="315" src="{!v.herokuDomain + '/player/'+ v.simpleRecord.Video_ID__c}" frameborder="0" allow="autoplay; encrypted-media"></iframe></center>
 </lightning:card>
     </div>
 </aura:component>
